# meeting-minutes

./: .gitignore  README.md  config.json  logger-prototype.ipynb  pipeline-prototype.ipynb  pipeline-prototyping.ipynb  pyproject.toml  run.py
src/: run.py
src/tasks/: diarize.py  extract_sound.py  package.py  slice_audio.py  stt.py
tasks/: diarize.py  extract_sound.py  package.py  slice_audio.py  stt.py
