[project]
name = "Dependency-monorepo"
version = "0.1.0"
description = "This the shared directory // environment for all data analysis and DS related projects"
authors = [
    {name = "Michael Kornilich",email = "molego16@gmail.com"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
]

# Dependency groups
# -----------------------------------------------
# Optional additions to core functionality
[tool.poetry.group.full-core]
optional = true

[tool.poetry.group.full-core.dependencies]
lxml = ">=6.0.2,<7.0.0"
requests = ">=2.32.3,<3.0.0"
psycopg = ">=3.3.3,<4.0.0"
kagglehub = ">=1.0.0,<2.0.0"
yfinance = ">=1.2.0,<2.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
huggingface-hub = "^1.10.2"
py-jsonl = "^1.3.25"


# Optional web inferfaces
[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
selenium = ">=4.38.0,<5.0.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"

# Optional data viz
[tool.poetry.group.data-viz]
optional = true

[tool.poetry.group.data-viz.dependencies]
matplotlib = ">=3.10.3,<4.0.0"
tqdm = ">=4.67.1,<5.0.0"
tabulate = ">=0.10.0,<0.11.0"
ipywidgets = ">=8.1.8,<9.0.0"

# Optional statistical modelling
[tool.poetry.group.stat-modelling]
optional = true

[tool.poetry.group.stat-modelling.dependencies]
scipy = ">=1.17.1,<2.0.0"
scikit-learn = ">=1.8.0,<2.0.0"
statsmodels = ">=0.14.6,<0.15.0"
pydantic = ">=2.12.5,<3.0.0"
pyannote-audio = ">=4.0.4,<5.0.0"
torchcodec = "==0.10"
faster-whisper = "^1.2.1"
# -----------------------------------------------

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
